added https certificate ot the applkcation.properties and httptohttpsconfig class to redirect it

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -33,56 +33,80 @@
 </footer>
 
 <script>
-document.getElementById('loginForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
+async function fetchAccountByEmail(email, token) {
+  try {
+    const res = await fetch('/Account/getAccountByEmail/' + encodeURIComponent(email), {
+      method: 'GET',
+      headers: {
+        'Authorization': 'Bearer ' + token
+      }
+    });
+    return res;
+  } catch (err) {
+    console.error('fetchAccountByEmail network error', err);
+    return { ok: false, status: 0, statusText: 'Network error', text: async () => String(err) };
+  }
+}
 
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('password').value;
-    const msg = document.getElementById('message');
+document.getElementById('loginForm').addEventListener('submit', async function (e) {
+  e.preventDefault();
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  const msg = document.getElementById('message');
+  msg.textContent = '';
 
-    msg.textContent = '';
-    msg.style.color = 'black';
+  try {
+    const res = await fetch('/Account/authenticate', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, password })
+    });
 
-    try {
-        const res = await fetch('/Account/authenticate', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email, password })
-        });
-
-        if (!res.ok) {
-            msg.style.color = 'red';
-            msg.textContent = 'Invalid email or password';
-            return;
-        }
-
-        const data = await res.json();
-
-        if (!data.token) {
-            msg.style.color = 'red';
-            msg.textContent = 'Authentication failed (no token)';
-            return;
-        }
-
-        // ✅ Store JWT (session)
-        localStorage.setItem('jwt', data.token);
-        localStorage.setItem('loggedEmail', email);
-
-        msg.style.color = 'green';
-        msg.textContent = 'Login successful';
-
-        // ✅ Redirect (role-based later via JWT claims)
-        setTimeout(() => {
-            window.location.href = '/index.html';
-        }, 500);
-
-    } catch (err) {
-        console.error(err);
-        msg.style.color = 'red';
-        msg.textContent = 'Server error. Please try again later.';
+    if (!res.ok) {
+      const text = await res.text();
+      msg.textContent = 'Login failed: ' + (text || res.statusText);
+      return;
     }
+
+    const data = await res.json();
+    const token = data.token || data.accessToken || data.jwt || data.access_token;
+    if (!token) {
+      msg.textContent = 'Login failed: no token received';
+      return;
+    }
+
+    // store token for later API calls
+    localStorage.setItem('jwt', token);
+
+    // Use the GET /Account/getAccountByEmail/{email} endpoint
+    const acctRes = await fetchAccountByEmail(email, token);
+
+    if (!acctRes.ok) {
+      const text = await acctRes.text();
+      msg.textContent = 'Account lookup failed: ' + (text || acctRes.statusText || acctRes.status);
+      console.error('getAccountByEmail failed:', acctRes.status, text);
+      // stay on login so user can retry instead of redirecting
+      return;
+    }
+
+    const acctData = await acctRes.json();
+    const account = acctData.account || acctData;
+    const type = account && account.type ? String(account.type).toUpperCase() : null;
+
+    if (type === 'USER') {
+      window.location.href = '/indexUser.html';
+    } else if (type === 'COMPANY') {
+      window.location.href = '/indexCompany.html';
+    } else {
+      // fallback if type missing or unknown
+      window.location.href = '/';
+    }
+
+  } catch (err) {
+    msg.textContent = 'Network error';
+    console.error(err);
+  }
 });
 </script>
 
-</body>
 </html>
