--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -37,5 +37,35 @@
 <footer>
 	<p>© 2026 CareerTracker</p>
 </footer>
+<script>
+(function () {
+  // Read token saved at login
+  const token = localStorage.getItem('jwt');
+
+  // If no token, send user back to login
+  if (!token) {
+    console.warn('No JWT found, redirecting to login');
+    window.location.href = '/login.html';
+    return;
+  }
+
+  // Expose token for debugging if needed
+  window.jwt = token;
+
+  // Helper to call protected endpoints with Authorization header
+  window.authFetch = function (url, opts = {}) {
+    opts.headers = opts.headers || {};
+    // preserve existing headers and add Authorization
+    opts.headers = Object.assign({}, opts.headers, {
+      'Authorization': 'Bearer ' + token
+    });
+    return fetch(url, opts);
+  };
+
+  // Example usage:
+  // authFetch('/User/getProfile/' + localStorage.getItem('loggenId'))
+  //   .then(r => r.json()).then(console.log).catch(console.error);
+})();
+</script>
 </body>
 </html>
