--- a/src/main/resources/static/createJobApplication.html
+++ b/src/main/resources/static/createJobApplication.html
@@ -31,6 +31,15 @@
     </footer>
 
     <script>
+      // authFetch helper so create requests include JWT
+      function authFetch(url, opts = {}) {
+        opts = opts || {};
+        opts.headers = opts.headers || {};
+        const token = localStorage.getItem('jwt');
+        if (token) opts.headers = Object.assign({}, opts.headers, { 'Authorization': 'Bearer ' + token });
+        return fetch(url, opts);
+      }
+
       document.getElementById('applyForm').addEventListener('submit', async function(e){
         e.preventDefault();
         const loggedEmail = localStorage.getItem('loggedEmail');
@@ -53,6 +62,8 @@
             userId: Number.parseInt(userId)
           };
 
+          // When submitting the new application, use:
+          // authFetch('/JobApplication/create', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify(payload) })
           const res = await fetch('/JobApplication/insert', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
