--- a/src/main/resources/static/profileCompany.html
+++ b/src/main/resources/static/profileCompany.html
@@ -1,39 +1,99 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Company Profile - CareerTracker</title>
+
+  <!-- CSS (Spring Boot static path) -->
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+
+<!-- ===== HEADER ===== -->
+<header>
+  <a class="site-title" href="/indexCompany.html">CareerTracker</a>
+</header>
+
+<!-- ===== MAIN CONTENT ===== -->
+<main class="wide-card">
+
+  <h2>Company Profile</h2>
+
+  <p id="note">Loading company profile…</p>
+
+  <!-- VIEW MODE -->
+  <div id="viewMode" style="display:none;">
+    <p><strong>Name:</strong> <span id="viewName"></span></p>
+    <p><strong>Email:</strong> <span id="viewEmail"></span></p>
+    <p><strong>Description:</strong> <span id="viewDescription"></span></p>
+
+    <div class="spaced">
+      <button id="editBtn" class="btn">Edit</button>
+    </div>
+  </div>
+
+  <!-- EDIT MODE -->
+  <form id="editMode" style="display:none;">
+    <input type="hidden" id="companyId">
+
+    <label for="name">Company name</label>
+    <input id="name" type="text">
+
+    <label for="email">Email</label>
+    <input id="email" type="email">
+
+    <label for="description">Description</label>
+    <textarea id="description"></textarea>
+
+    <button type="submit" class="btn">Save</button>
+    <button type="button" id="cancelBtn" class="btn btn-secondary spaced">Cancel</button>
+
+    <p id="message"></p>
+  </form>
+
+</main>
+
+<!-- ===== FOOTER ===== -->
+<footer>
+  <p>© 2026 CareerTracker</p>
+</footer>
+
+<!-- ===== SCRIPT (BOTTOM, SAFE) ===== -->
 <script>
 (function () {
   // ===== AUTH BOOTSTRAP =====
   const token = localStorage.getItem('jwt');
-  const loggedId = localStorage.getItem('loggenId'); // canonical key set by login
+  const loggedId = localStorage.getItem('loggedId');
 
-  if (!token) {
-    console.warn('Missing JWT, redirecting to login');
+  if (!token || !loggedId) {
+    console.warn('Missing auth info, redirecting to login');
     window.location.href = '/login.html';
     return;
   }
 
-  // Global helper for authenticated requests
+  // Authenticated fetch helper
   window.authFetch = function (url, opts = {}) {
-    opts = opts || {};
-    opts.headers = opts.headers || {};
-    opts.headers = Object.assign({}, opts.headers, {
+    opts.headers = Object.assign({}, opts.headers || {}, {
       'Authorization': 'Bearer ' + token
     });
     return fetch(url, opts);
   };
 
+  const note = document.getElementById('note');
+  const viewMode = document.getElementById('viewMode');
+  const editMode = document.getElementById('editMode');
+  const message = document.getElementById('message');
+
   // ===== LOAD COMPANY =====
   async function loadCompany() {
-    const note = document.getElementById('note');
-
-    if (!loggedId) {
-      note.textContent = 'No logged account found. Please log in.';
-      return;
-    }
-
     try {
-      const res = await authFetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedId)}`);
+      const res = await authFetch(
+        `/Company/getCompanyByAccountId/${encodeURIComponent(loggedId)}`
+      );
 
       if (res.status === 404) {
-        note.textContent = 'No company profile found for this account.';
+        note.textContent = 'No company profile found.';
         return;
       }
       if (!res.ok) throw new Error('Failed to load company');
@@ -42,7 +102,6 @@
       const companyId = company.id || company.companyId || '';
 
       document.getElementById('companyId').value = companyId;
-
       document.getElementById('name').value = company.name || '';
       document.getElementById('email').value = company.email || '';
       document.getElementById('description').value = company.description || '';
@@ -52,27 +111,28 @@
       document.getElementById('viewDescription').textContent = company.description || '';
 
       note.style.display = 'none';
-      document.getElementById('viewMode').style.display = 'block';
+      viewMode.style.display = 'block';
     } catch (err) {
       console.error(err);
       note.textContent = 'Error loading company profile.';
     }
   }
 
-  // ===== UI TOGGLES =====
+  // ===== UI EVENTS =====
   document.getElementById('editBtn').addEventListener('click', () => {
-    document.getElementById('viewMode').style.display = 'none';
-    document.getElementById('editMode').style.display = 'block';
+    viewMode.style.display = 'none';
+    editMode.style.display = 'block';
   });
 
   document.getElementById('cancelBtn').addEventListener('click', () => {
-    document.getElementById('editMode').style.display = 'none';
-    document.getElementById('viewMode').style.display = 'block';
+    editMode.style.display = 'none';
+    viewMode.style.display = 'block';
   });
 
   // ===== SAVE COMPANY =====
-  document.getElementById('editMode').addEventListener('submit', async function (e) {
+  editMode.addEventListener('submit', async function (e) {
     e.preventDefault();
+    message.textContent = '';
 
     const payload = {
       name: document.getElementById('name').value,
@@ -80,24 +140,10 @@
       description: document.getElementById('description').value
     };
 
-    const msg = document.getElementById('message');
-    const saveBtn = e.target.querySelector('button[type="submit"]');
-    saveBtn.disabled = true;
-
     try {
-      let companyId = document.getElementById('companyId').value;
+      const companyId = document.getElementById('companyId').value;
 
-      if (!companyId) {
-        const res = await authFetch(
-          `/Company/getCompanyByAccountId/${encodeURIComponent(loggedId)}`
-        );
-        if (!res.ok) throw new Error('Unable to resolve company ID');
-        const company = await res.json();
-        companyId = company.id || company.companyId || '';
-        document.getElementById('companyId').value = companyId;
-      }
-
-      const updateRes = await authFetch(
+      const res = await authFetch(
         `/Company/updateCompany/${encodeURIComponent(companyId)}`,
         {
           method: 'PUT',
@@ -106,8 +152,8 @@
         }
       );
 
-      if (!updateRes.ok) {
-        const text = await updateRes.text();
+      if (!res.ok) {
+        const text = await res.text();
         throw new Error(text || 'Update failed');
       }
 
@@ -115,19 +161,21 @@
       document.getElementById('viewEmail').textContent = payload.email;
       document.getElementById('viewDescription').textContent = payload.description;
 
-      msg.style.color = 'green';
-      msg.textContent = 'Saved successfully.';
-      document.getElementById('editMode').style.display = 'none';
-      document.getElementById('viewMode').style.display = 'block';
+      message.style.color = 'green';
+      message.textContent = 'Profile updated successfully';
+
+      editMode.style.display = 'none';
+      viewMode.style.display = 'block';
     } catch (err) {
       console.error(err);
-      msg.style.color = 'red';
-      msg.textContent = err.message || 'Error saving changes';
-    } finally {
-      saveBtn.disabled = false;
+      message.style.color = 'red';
+      message.textContent = err.message || 'Error saving changes';
     }
   });
 
   loadCompany();
 })();
 </script>
+
+</body>
+</html>
