--- a/src/main/resources/static/profileUser.html
+++ b/src/main/resources/static/profileUser.html
@@ -16,17 +16,17 @@
 
       <p id="note">Loading your profile…</p>
 
-      <div id="viewMode" style="display:none;">
+      <div id="viewMode" class="view-only hidden">
         <p><strong>First name:</strong> <span id="viewFirstName"></span></p>
         <p><strong>Last name:</strong> <span id="viewLastName"></span></p>
         <p><strong>Email:</strong> <span id="viewEmail"></span></p>
         <p><strong>Description:</strong> <span id="viewDescription"></span></p>
-        <div>
-          <button id="editBtn">Edit</button>
+        <div class="spaced">
+          <button id="editBtn" class="btn">Edit</button>
         </div>
       </div>
 
-      <form id="editMode" style="display:none;">
+      <form id="editMode" class="edit-only hidden">
         <input type="hidden" id="userId">
 
         <label for="firstName">First name</label>
@@ -41,9 +41,9 @@
         <label for="description">Description</label>
         <input id="description" type="text">
 
-        <div style="display:flex; gap:0.5rem; margin-top:1rem;">
-          <button type="submit">Save</button>
-          <button type="button" id="cancelBtn">Cancel</button>
+        <div class="button-row">
+          <button type="submit" class="btn">Save</button>
+          <button type="button" id="cancelBtn" class="btn btn-secondary">Cancel</button>
         </div>
       </form>
 
@@ -56,32 +56,35 @@
 
     <script>
 (function () {
-  // authFetch bootstrap
+  // ===== AUTH BOOTSTRAP =====
   const token = localStorage.getItem('jwt');
-  const loggedId = localStorage.getItem('loggenId');
+  // accept either canonical or legacy key
+  const loggedId = localStorage.getItem('loggenId') || localStorage.getItem('loggedId');
 
+  // require token; if missing redirect to login
   if (!token) {
     console.warn('Missing JWT, redirecting to login');
     window.location.href = '/login.html';
     return;
   }
 
-  function authFetch(url, opts = {}) {
+  // authFetch helper (adds Authorization header)
+  window.authFetch = function (url, opts = {}) {
     opts = opts || {};
     opts.headers = opts.headers || {};
-    const tokenLocal = localStorage.getItem('jwt');
-    if (tokenLocal) {
-      opts.headers = Object.assign({}, opts.headers, { 'Authorization': 'Bearer ' + tokenLocal });
-    }
+    opts.headers = Object.assign({}, opts.headers, { 'Authorization': 'Bearer ' + token });
     return fetch(url, opts);
-  }
+  };
 
-  // Load profile using authFetch and canonical id
+  const note = document.getElementById('note');
+  const viewMode = document.getElementById('viewMode');
+  const editMode = document.getElementById('editMode');
+  const message = document.getElementById('message');
+
+  // ===== LOAD PROFILE =====
   async function loadProfile() {
-    const note = document.getElementById('note');
-
     if (!loggedId) {
-      note.textContent = 'No logged account found. Please log in.';
+      note.textContent = 'No logged account id found (loggenId or loggedId). Please log in.';
       return;
     }
 
@@ -95,120 +98,128 @@
 
       const user = await res.json();
 
-      // populate id
+      // populate id and view spans (edit inputs are filled only on Edit)
       document.getElementById('userId').value = user.id || user.userId || '';
-      // populate separate first/last name; fall back to splitting user.name if first/last absent
       const first = user.firstName || (user.name ? user.name.split(' ')[0] : '') || '';
       const last = user.lastName || (user.name ? user.name.split(' ').slice(1).join(' ') : '') || '';
-      document.getElementById('firstName').value = first;
-      document.getElementById('lastName').value = last;
-      document.getElementById('email').value = user.email || '';
-      document.getElementById('description').value = user.description || '';
-
       document.getElementById('viewFirstName').textContent = first;
       document.getElementById('viewLastName').textContent = last;
       document.getElementById('viewEmail').textContent = user.email || '';
       document.getElementById('viewDescription').textContent = user.description || '';
 
-      note.style.display = 'none';
-      document.getElementById('viewMode').style.display = 'block';
+      // ensure only view mode visible initially
+      document.body.classList.remove('editing');
+      note.classList.add('hidden');
+      viewMode.classList.remove('hidden');
+      editMode.classList.add('hidden');
     } catch (err) {
       console.error(err);
       note.textContent = 'Error loading profile.';
     }
   }
 
-  // Edit button toggles to edit mode
-  document.getElementById('editBtn').addEventListener('click', function(){
-    document.getElementById('viewMode').style.display = 'none';
-    document.getElementById('editMode').style.display = 'block';
-  });
+  // ===== UI BINDINGS (guard element presence) =====
+  const editBtn = document.getElementById('editBtn');
+  if (editBtn) {
+    editBtn.addEventListener('click', () => {
+      // populate edit fields from current view spans when entering edit mode
+      document.getElementById('firstName').value = document.getElementById('viewFirstName').textContent || '';
+      document.getElementById('lastName').value = document.getElementById('viewLastName').textContent || '';
+      document.getElementById('email').value = document.getElementById('viewEmail').textContent || '';
+      document.getElementById('description').value = document.getElementById('viewDescription').textContent || '';
 
-  // Cancel reverts to view mode
-  document.getElementById('cancelBtn').addEventListener('click', function(){
-    document.getElementById('editMode').style.display = 'none';
-    document.getElementById('viewMode').style.display = 'block';
-  });
+      // switch to edit mode
+      document.body.classList.add('editing');
+      viewMode.classList.add('hidden');
+      editMode.classList.remove('hidden');
+    });
+  }
 
-  document.getElementById('editMode').addEventListener('submit', async function(e){
-    e.preventDefault();
+  const cancelBtn = document.getElementById('cancelBtn');
+  if (cancelBtn) {
+    cancelBtn.addEventListener('click', () => {
+      // discard edits and return to view mode
+      document.body.classList.remove('editing');
+      editMode.classList.add('hidden');
+      viewMode.classList.remove('hidden');
+      message.textContent = '';
+    });
+  }
 
-    const msg = document.getElementById('message');
-    const saveBtn = e.target.querySelector('button[type="submit"]');
-    saveBtn.disabled = true;
+  if (editMode) {
+    editMode.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      message.textContent = '';
+      const saveBtn = editMode.querySelector('button[type="submit"]');
+      if (saveBtn) saveBtn.disabled = true;
 
-    try {
-      // Try to get id from hidden input
-      let id = document.getElementById('userId').value;
+      try {
+        // Ensure we have an id
+        let id = document.getElementById('userId').value;
+        if (!id) {
+          const accountKey = loggedId || localStorage.getItem('loggenId') || localStorage.getItem('loggedId');
+          if (!accountKey) {
+            message.style.color = 'red';
+            message.textContent = 'No logged account found. Please log in.';
+            if (saveBtn) saveBtn.disabled = false;
+            return;
+          }
 
-      // If missing, fetch user by account id to obtain it
-      if (!id) {
-        const loggedId = localStorage.getItem('loggenId');
-        if (!loggedId) {
-          msg.style.color = 'red';
-          msg.textContent = 'No logged account found. Please log in.';
-          saveBtn.disabled = false;
-          return;
+          const r = await authFetch(`/User/getUserByAccountId/${encodeURIComponent(accountKey)}`);
+          if (r.status === 404) {
+            message.style.color = 'red';
+            message.textContent = 'No user profile found for this account.';
+            if (saveBtn) saveBtn.disabled = false;
+            return;
+          }
+          if (!r.ok) throw new Error('Failed to fetch user id');
+          const u = await r.json();
+          id = u.id || u.userId || '';
+          document.getElementById('userId').value = id || '';
         }
 
-        const res = await authFetch(`/User/getUserByAccountId/${encodeURIComponent(loggedId)}`);
-        if (res.status === 404) {
-          msg.style.color = 'red';
-          msg.textContent = 'No user profile found for this account.';
-          saveBtn.disabled = false;
-          return;
-        }
+        const payload = {
+          firstName: document.getElementById('firstName').value,
+          lastName: document.getElementById('lastName').value,
+          email: document.getElementById('email').value,
+          description: document.getElementById('description').value
+        };
+
+        const res = await authFetch(`/User/updateUser/${encodeURIComponent(id)}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload)
+        });
+
         if (!res.ok) {
-          throw new Error('Failed to fetch user id');
+          let bodyText = '';
+          try { bodyText = JSON.stringify(await res.json()); } catch (_) {
+            try { bodyText = await res.text(); } catch (_) { bodyText = '<no body>'; }
+          }
+          throw new Error(bodyText || `Failed to save changes (${res.status})`);
         }
-        const user = await res.json();
-        id = user.id || user.userId || '';
-        document.getElementById('userId').value = id || '';
+
+        // update view
+        document.getElementById('viewFirstName').textContent = payload.firstName || '';
+        document.getElementById('viewLastName').textContent = payload.lastName || '';
+        document.getElementById('viewEmail').textContent = payload.email || '';
+        document.getElementById('viewDescription').textContent = payload.description || '';
+
+        message.style.color = 'green';
+        message.textContent = 'Saved successfully.';
+        // switch back to view mode
+        document.body.classList.remove('editing');
+        editMode.classList.add('hidden');
+        viewMode.classList.remove('hidden');
+      } catch (err) {
+        console.error('Error saving user', err);
+        message.style.color = 'red';
+        message.textContent = err && err.message ? err.message : 'Error saving changes';
+      } finally {
+        if (saveBtn) saveBtn.disabled = false;
       }
-
-      // prepare payload with separate firstName / lastName
-      const payload = {
-        firstName: document.getElementById('firstName').value,
-        lastName: document.getElementById('lastName').value,
-        email: document.getElementById('email').value,
-        description: document.getElementById('description').value
-      };
-
-      const res = await authFetch(`/User/updateUser/${encodeURIComponent(id)}`, {
-        method: 'PUT',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify(payload)
-      });
-      if (!res.ok) {
-        let bodyText = '';
-        try { bodyText = JSON.stringify(await res.json()); } catch(_) {
-          try { bodyText = await res.text(); } catch(_) { bodyText = '<no body>'; }
-        }
-        console.error('Update user failed', res.status, bodyText);
-        msg.style.color = 'red';
-        msg.textContent = `Failed to save changes (${res.status}): ${bodyText}`;
-        saveBtn.disabled = false;
-        return;
-      }
-
-      // update view mode values (show first and last separately)
-      document.getElementById('viewFirstName').textContent = payload.firstName || '';
-      document.getElementById('viewLastName').textContent = payload.lastName || '';
-      document.getElementById('viewEmail').textContent = payload.email || '';
-      document.getElementById('viewDescription').textContent = payload.description || '';
-
-      msg.style.color = 'green';
-      msg.textContent = 'Saved successfully.';
-      document.getElementById('editMode').style.display = 'none';
-      document.getElementById('viewMode').style.display = 'block';
-      saveBtn.disabled = false;
-    } catch (err) {
-      console.error('Error saving user', err);
-      msg.style.color = 'red';
-      msg.textContent = `Error saving changes: ${err && err.message ? err.message : err}`;
-      saveBtn.disabled = false;
-    }
-  });
+    });
+  }
 
   loadProfile();
 })();
