--- a/src/main/resources/static/createJobPost.html
+++ b/src/main/resources/static/createJobPost.html
@@ -1,118 +1,123 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create Job Post - CareerTracker</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <header>
-      <a class="site-title" href="/indexCompany.html">CareerTracker</a>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Create Job Post - CareerTracker</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <header>
+    <a class="site-title" href="/indexCompany.html">CareerTracker</a>
+  </header>
 
-    <main class="wide-card">
-      <h2>Create Job Post</h2>
-      <p id="note">Fill the form and click Create.</p>
+  <main class="wide-card">
+    <h2>Create Job Post</h2>
+    <p id="note">Fill the form and click Create.</p>
 
-      <form id="createForm">
-        <input type="hidden" id="companyId" name="companyId" />
+    <form id="createForm">
+      <input type="hidden" id="companyId" name="companyId" />
 
-        <label for="name">Job title</label><br />
-        <input id="name" name="name" type="text" required /><br />
+      <label for="name">Job title</label><br />
+      <input id="name" name="name" type="text" required /><br />
 
-        <label for="description">Description</label><br />
-        <textarea id="description" name="description" rows="4" required></textarea><br />
+      <label for="description">Description</label><br />
+      <textarea id="description" name="description" rows="4" required></textarea><br />
 
-        <label for="duration">Duration</label><br />
-        <input id="duration" name="duration" type="text" /><br />
+      <label for="duration">Duration</label><br />
+      <input id="duration" name="duration" type="text" /><br />
 
-        <label for="available">Available</label><br />
-        <input id="available" name="available" type="text" /><br />
+      <label for="available">Available</label><br />
+      <input id="available" name="available" type="text" /><br />
 
-        <label for="salary">Salary</label><br />
-        <input id="salary" name="salary" type="number" /><br />
+      <label for="salary">Salary</label><br />
+      <input id="salary" name="salary" type="number" /><br />
 
-        <p id="message"></p>
-        <button type="submit">Create</button>
-        <a href="/displayJobPost.html"><button type="button">Cancel</button></a>
-      </form>
+      <p id="message"></p>
+      <button type="submit">Create</button>
+      <a href="/displayJobPost.html"><button type="button">Cancel</button></a>
+    </form>
+  </main>
 
-    </main>
+  <footer>
+    <p>© 2026 CareerTracker</p>
+  </footer>
 
-    <footer>
-      <p>© 2026 CareerTracker</p>
-    </footer>
+  <script>
+    // Auth fetch helper: attach JWT
+    async function authFetch(url, opts = {}) {
+      const token = localStorage.getItem('jwt');
+      if (!token) throw new Error('Missing JWT; please log in.');
+      opts.headers = Object.assign({}, opts.headers || {}, {
+        'Authorization': 'Bearer ' + token.trim()
+      });
+      return fetch(url, opts);
+    }
 
-    <script>
-      // authFetch helper for protected endpoints
-      function authFetch(url, opts = {}) {
-        opts = opts || {};
-        opts.headers = opts.headers || {};
-        const token = localStorage.getItem('jwt');
-        if (token) opts.headers = Object.assign({}, opts.headers, { 'Authorization': 'Bearer ' + token });
-        return fetch(url, opts);
+    document.addEventListener('DOMContentLoaded', async () => {
+      const loggedId = localStorage.getItem('loggedId');
+      const message = document.getElementById('message');
+      const companyIdInput = document.getElementById('companyId');
+      const form = document.getElementById('createForm');
+
+      // Check login & user type
+      if (!loggedId) {
+        message.textContent = 'No logged account found. Please log in.';
+        form.querySelector('button[type="submit"]').disabled = true;
+        return;
       }
 
-      // Use logged account id (accept both canonical and legacy keys) to fetch company and obtain the company id
-      document.addEventListener('DOMContentLoaded', () => {
-  const loggedAccountId = localStorage.getItem('loggenId') || localStorage.getItem('loggedId');
-        const message = document.getElementById('message');
-        const companyIdInput = document.getElementById('companyId');
 
-        if (!loggedAccountId) {
-          message.textContent = 'No logged account found. Please log in.';
-          // keep form visible for troubleshooting
-          return;
-        }
 
-        // Fetch company by account id to get the company id (use authFetch so JWT is attached)
-        authFetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedAccountId)}`)
-          .then(res => {
-            if (res.status === 404) throw new Error('No company profile for this account');
-            if (!res.ok) throw new Error('Could not fetch company');
-            return res.json();
-          })
-          .then(company => {
-            const id = company.company_id || company.companyId || company.id || company.account_id;
-            if (!id) throw new Error('Company id not found');
-            companyIdInput.value = Number.parseInt(id);
+      try {
+        // Get company id using JWT
+        const res = await authFetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedId)}`);
+        if (res.status === 404) throw new Error('No company profile found for this account');
+        if (!res.ok) throw new Error('Failed to fetch company');
 
-            // wire submit handler after we have company id
-            document.getElementById('createForm').addEventListener('submit', async (e) => {
-              e.preventDefault();
-              const payload = {
-                companyId: Number.parseInt(companyIdInput.value),
-                name: document.getElementById('name').value,
-                description: document.getElementById('description').value,
-                duration: document.getElementById('duration').value,
-                available: document.getElementById('available').value,
-                salary: Number.parseInt(document.getElementById('salary').value) || 0
-              };
+        const company = await res.json();
+        const companyId = company.company_id || company.companyId || company.id ;
+        if (!companyId) throw new Error('Company ID not found');
 
-              try {
-                const res = await authFetch('/JobPost/create', {
-                  method: 'POST',
-                  headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify(payload)
-                });
-                if (!res.ok) throw new Error('Create failed');
-                const created = await res.json();
-                localStorage.setItem('lastCreatedPostId', created.postId || created.post_id || created.id || '');
-                globalThis.location.href = '/displayJobPost.html';
-              } catch (err) {
-                console.error(err);
-                document.getElementById('message').textContent = 'Failed to create job post.';
-              }
+        companyIdInput.value = Number(companyId);
+
+        // Submit form handler
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+
+          const payload = {
+            companyId: Number(companyIdInput.value),
+            name: document.getElementById('name').value,
+            description: document.getElementById('description').value,
+            duration: document.getElementById('duration').value,
+            available: document.getElementById('available').value,
+            salary: Number(document.getElementById('salary').value) || 0
+          };
+
+          try {
+            const postRes = await authFetch('/JobPost/insertPost', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(payload)
             });
-          })
-          .catch(err => {
+
+            if (!postRes.ok) throw new Error('Failed to create job post');
+
+            const created = await postRes.json();
+            localStorage.setItem('lastCreatedPostId', created.postId || created.id || '');
+            window.location.href = '/displayJobPost.html';
+          } catch (err) {
             console.error(err);
-            message.textContent = 'Could not determine company id for this account. Make sure you have a company profile.';
-            // keep the form visible so the user can inspect fields; disable create button
-            document.querySelector('#createForm button[type="submit"]').disabled = true;
-          });
-      });
-    </script>
-  </body>
+            message.textContent = 'Failed to create job post. ' + err.message;
+          }
+        });
+
+      } catch (err) {
+        console.error(err);
+        message.textContent = err.message;
+        form.querySelector('button[type="submit"]').disabled = true;
+      }
+    });
+  </script>
+</body>
 </html>
